configured portfolio page

--- a/day-4/project/templates/base.html
+++ b/day-4/project/templates/base.html
@@ -58,7 +58,7 @@
             <li><a class="nav-link scrollto active" href="/">Home</a></li>
             <li><a class="nav-link scrollto" href="/posts">Posts</a></li>
           
-              <a class="nav-link scrollto" href="#portfolio">Portfolio</a>
+              <a class="nav-link scrollto" href="/portfolio">Portfolio</a>
             </li>
 
             {% if current_user.is_authenticated %}
