--- a/day-4/project/templates/profile.html
+++ b/day-4/project/templates/profile.html
@@ -44,10 +44,13 @@ Profile
 
 
 
-
-
   </div>
 </section><!-- End Contact Section -->
 
+{% if  port %}
+
+{% include "displayportfolio.html" %}
+
+{% endif %}
 
 {% endblock body %}
