--- a/day-4/project/templates/displayportfolio.html
+++ b/day-4/project/templates/displayportfolio.html
@@ -24,6 +24,8 @@
             </p>
             <p><strong>End Date:</strong> {{ port.endDate}}</p>
             <p><strong>CGPA:</strong> {{ port.cgpa}}</p>
+            <a href="{{ url_for('display_resume') }}" class="btn btn-primary">View Resume</a>
+
           </div>
         </div>
         <div class="col-md-4"></div>
